--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>QR Code Generator</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>QR Code Generator</title>
-	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="qrcode.min.js"></script>
-	<base href=".">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
-	<div id="wrapper">
-		<div id="header">
-			<h1>QR Code Generator</h1>
-		</div>
+	<div class="wrapper app-wrapper">
+		<h2 class="section-header">QR Code Generator</h2>
 		<input type="text" id="link" name="link" required minlength="4"/>
 		<button onclick="generate()">Generate</button>
 		<br><br>
@@ -21,7 +23,7 @@
 		</div>
 		<br><br><br>
 		<footer class="fixed-bottom">
-			<p>Portions of the project have been copied from <a href="https://davidshimjs.github.io/qrcodejs/">qrcode.js</a> which is copyrighted by David Shim and distributed under the terms of the <a href="LICENSE-qrcodejs">MIT License</a>.</p>
+			<p>This is simply a frontend for <a href="https://davidshimjs.github.io/qrcodejs/">qrcode.js</a> which is copyrighted by David Shim and distributed under the terms of the <a href="LICENSE-qrcodejs">MIT License</a>.</p>
 		</div>
 	</div>
 
