--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="qrcode.min.js"></script>
+	<script src="https://raw.githubusercontent.com/davidshimjs/qrcodejs/refs/heads/master/qrcode.min.js"></script>
 </head>
 <body>
 	<div class="wrapper app-wrapper">
